parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    right_dblquotes
    left_dblquotes

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> program id nt_pushJmpMain semicolon PROGRAMA_VARS nt_cambiarScope PROGRAMA_FUNC nt_cambiarScope main nt_ambienteMain CUERPO
Rule 2     nt_cambiarScope -> empty
Rule 3     nt_ambienteMain -> nt_cambiarScope
Rule 4     nt_pushJmpMain -> empty
Rule 5     PROGRAMA_VARS -> VARS
Rule 6     PROGRAMA_VARS -> empty
Rule 7     PROGRAMA_FUNC -> PROGRAMA_FUNC_AUX
Rule 8     PROGRAMA_FUNC -> PROGRAMA_FUNC PROGRAMA_FUNC_AUX
Rule 9     PROGRAMA_FUNC_AUX -> FUNC
Rule 10    PROGRAMA_FUNC_AUX -> empty
Rule 11    VARS -> VARS_AUX
Rule 12    VARS_AUX -> VARS_LIST_VAR
Rule 13    VARS_AUX -> VARS_AUX VARS_LIST_VAR
Rule 14    VARS_LIST_VAR -> VARS_LIST
Rule 15    VARS_LIST_VAR -> VARS_VAR
Rule 16    VARS_LIST -> list nt_hacerLista TIPO VARS_LIST_AUX semicolon
Rule 17    nt_hacerLista -> empty
Rule 18    VARS_LIST_AUX -> id nt_agregarId left_sb cteInt nt_agregarCteLista right_sb nt_agregarDicVar
Rule 19    VARS_LIST_AUX -> VARS_LIST_AUX comma id nt_agregarId left_sb cteInt nt_agregarCteLista right_sb nt_agregarDicVar
Rule 20    nt_agregarId -> empty
Rule 21    nt_agregarCteLista -> empty
Rule 22    nt_agregarDicVar -> empty
Rule 23    VARS_VAR -> var nt_hacerVar TIPO VARS_VAR_AUX semicolon
Rule 24    nt_hacerVar -> empty
Rule 25    VARS_VAR_AUX -> id nt_agregarId nt_agregarDicVar
Rule 26    VARS_VAR_AUX -> VARS_VAR_AUX comma id nt_agregarId nt_agregarDicVar
Rule 27    TIPO -> int nt_cambioTipoActual
Rule 28    TIPO -> float nt_cambioTipoActual
Rule 29    TIPO -> bool nt_cambioTipoActual
Rule 30    TIPO -> string nt_cambioTipoActual
Rule 31    nt_cambioTipoActual -> empty
Rule 32    CUERPO -> left_cb CUERPO_AUX right_cb
Rule 33    CUERPO_AUX -> CUERPO_VARS CUERPO_ESTATUTO
Rule 34    CUERPO_AUX -> CUERPO_AUX CUERPO_VARS CUERPO_ESTATUTO
Rule 35    CUERPO_VARS -> VARS
Rule 36    CUERPO_VARS -> empty
Rule 37    CUERPO_ESTATUTO -> ESTATUTO
Rule 38    CUERPO_ESTATUTO -> empty
Rule 39    CUERPOFUNC -> CUERPOFUNC_AUX
Rule 40    CUERPOFUNC_AUX -> CUERPOFUNC_VARS nt_funcInicio CUERPOFUNC_ESTATUTO
Rule 41    CUERPOFUNC_AUX -> CUERPOFUNC_AUX CUERPOFUNC_VARS nt_funcInicio CUERPOFUNC_ESTATUTO
Rule 42    nt_funcInicio -> empty
Rule 43    CUERPOFUNC_VARS -> VARS
Rule 44    CUERPOFUNC_VARS -> empty
Rule 45    CUERPOFUNC_ESTATUTO -> ESTATUTO
Rule 46    CUERPOFUNC_ESTATUTO -> empty
Rule 47    CUERPORETORNO -> left_cb CUERPORETORNO_AUX right_cb
Rule 48    CUERPORETORNO_AUX -> CUERPORETORNO_CF_AUX RETORNO
Rule 49    CUERPORETORNO_AUX -> CUERPORETORNO_AUX CUERPORETORNO_CF_AUX RETORNO
Rule 50    CUERPORETORNO_CF_AUX -> CUERPOFUNC
Rule 51    CUERPORETORNO_CF_AUX -> empty
Rule 52    RETORNO -> return EXP semicolon
Rule 53    FUNC -> TIPO nt_cambioFuncActual id nt_agregarIdFunc left_par FUNC_PARA right_par CUERPORETORNO nt_pushEndsub
Rule 54    FUNC -> VOIDFUNC nt_pushEndsub
Rule 55    nt_pushEndsub -> empty
Rule 56    test_print -> empty
Rule 57    nt_cambioFuncActual -> empty
Rule 58    nt_agregarIdFunc -> empty
Rule 59    FUNC_PARA -> TIPO id nt_agregarParametro
Rule 60    FUNC_PARA -> FUNC_PARA comma TIPO id nt_agregarParametro
Rule 61    FUNC_PARA -> empty
Rule 62    nt_agregarParametro -> empty
Rule 63    VOIDFUNC -> void nt_hacerVoid id nt_agregarIdFunc left_par VOIDFUNC_PARA right_par left_cb CUERPOFUNC right_cb
Rule 64    nt_hacerVoid -> empty
Rule 65    VOIDFUNC_PARA -> TIPO id nt_agregarParametro
Rule 66    VOIDFUNC_PARA -> VOIDFUNC_PARA comma TIPO id nt_agregarParametro
Rule 67    ESTATUTO -> ASIGNACION
Rule 68    ESTATUTO -> CONDICION
Rule 69    ESTATUTO -> CICLO
Rule 70    ESTATUTO -> LECTURA
Rule 71    ESTATUTO -> ESCRITURA
Rule 72    ESTATUTO -> LLAMADA
Rule 73    CONDICION -> if CONDICION_AUX
Rule 74    CONDICION_AUX -> left_par EXPRESION nt_checarBool right_par CUERPO ELSE_ELIF nt_pushSalto
Rule 75    ELSE_ELIF -> ELSE
Rule 76    ELSE_ELIF -> ELIF
Rule 77    ELSE_ELIF -> empty
Rule 78    ELSE -> else nt_pushElse CUERPO
Rule 79    ELIF -> elseif nt_pushElse CONDICION_AUX
Rule 80    nt_checarBool -> empty
Rule 81    nt_pushSalto -> empty
Rule 82    nt_pushElse -> empty
Rule 83    CICLO -> while nt_saltoLoop left_par EXPRESION nt_checarBool right_par CUERPO nt_pushLoop
Rule 84    nt_saltoLoop -> empty
Rule 85    nt_pushLoop -> empty
Rule 86    LECTURA -> cread left_par id nt_leer right_par semicolon
Rule 87    nt_leer -> empty
Rule 88    ESCRITURA -> cwrite left_par EXPRESION nt_escribir right_par semicolon
Rule 89    nt_escribir -> empty
Rule 90    LLAMADA -> left_par LLAMADA_EXPRESION right_par semicolon
Rule 91    LLAMADA_EXPRESION -> EXPRESION
Rule 92    LLAMADA_EXPRESION -> LLAMADA_EXPRESION comma EXPRESION
Rule 93    EXPRESION -> EXPRESION_NOT EXPRESIONLOGICA nt_checaAndOrNot EXPRESION_B
Rule 94    nt_checaAndOrNot -> empty
Rule 95    EXPRESION_NOT -> not nt_pushPOper
Rule 96    EXPRESION_NOT -> empty
Rule 97    EXPRESION_B -> and nt_pushPOper EXPRESION
Rule 98    EXPRESION_B -> or nt_pushPOper EXPRESION
Rule 99    EXPRESION_B -> empty
Rule 100   EXPRESIONLOGICA -> EXP EXPRESIONLOGICA_AUX
Rule 101   EXPRESIONLOGICA_AUX -> lt nt_pushPOper EXP nt_checarRelop
Rule 102   EXPRESIONLOGICA_AUX -> gt nt_pushPOper EXP nt_checarRelop
Rule 103   EXPRESIONLOGICA_AUX -> ne nt_pushPOper EXP nt_checarRelop
Rule 104   EXPRESIONLOGICA_AUX -> ge nt_pushPOper EXP nt_checarRelop
Rule 105   EXPRESIONLOGICA_AUX -> le nt_pushPOper EXP nt_checarRelop
Rule 106   EXPRESIONLOGICA_AUX -> et nt_pushPOper EXP nt_checarRelop
Rule 107   EXPRESIONLOGICA_AUX -> empty
Rule 108   nt_checarRelop -> empty
Rule 109   EXP -> TERMINO nt_checar_sumas EXP_AUX
Rule 110   nt_checar_sumas -> empty
Rule 111   EXP_AUX -> plus nt_pushPOper EXP
Rule 112   EXP_AUX -> minus nt_pushPOper EXP
Rule 113   EXP_AUX -> empty
Rule 114   TERMINO -> FACTOR nt_checar_multis TERMINO_AUX
Rule 115   nt_checar_multis -> empty
Rule 116   TERMINO_AUX -> multiply nt_pushPOper TERMINO
Rule 117   TERMINO_AUX -> divide nt_pushPOper TERMINO
Rule 118   TERMINO_AUX -> empty
Rule 119   FACTOR -> left_par nt_pushPOper EXPRESION right_par nt_popPOper
Rule 120   FACTOR -> CONSTANTE
Rule 121   FACTOR -> LISTA
Rule 122   FACTOR -> FACTOR_AUX
Rule 123   FACTOR_AUX -> id nt_pushPilaO
Rule 124   FACTOR_AUX -> id LLAMADA_F
Rule 125   LLAMADA_F -> left_par EXPRESION LLAMADAF_AUX right_par
Rule 126   LLAMADAF_AUX -> comma EXPRESION LLAMADAF_AUX
Rule 127   LLAMADAF_AUX -> empty
Rule 128   LISTA -> id left_sb EXP right_sb
Rule 129   CONSTANTE -> NUMERICA
Rule 130   CONSTANTE -> BOOLEANA
Rule 131   CONSTANTE -> STRINGS
Rule 132   NUMERICA -> NUMERICA_AUX
Rule 133   NUMERICA -> plus nt_sigMas NUMERICA_AUX
Rule 134   NUMERICA -> minus nt_sigMenos NUMERICA_AUX
Rule 135   nt_sigMas -> empty
Rule 136   nt_sigMenos -> empty
Rule 137   NUMERICA_AUX -> cteInt nt_pushInt
Rule 138   NUMERICA_AUX -> cteFloat nt_pushFloat
Rule 139   nt_pushInt -> empty
Rule 140   nt_pushFloat -> empty
Rule 141   BOOLEANA -> true
Rule 142   BOOLEANA -> false
Rule 143   STRINGS -> cteString
Rule 144   ASIGNACION -> ASIGNACION_AUX equals nt_pushPOper EXPRESION nt_checaEquals semicolon
Rule 145   nt_checaEquals -> empty
Rule 146   ASIGNACION_AUX -> id nt_pushPilaO
Rule 147   ASIGNACION_AUX -> LISTA
Rule 148   nt_pushPilaO -> empty
Rule 149   nt_pushPOper -> empty
Rule 150   nt_popPOper -> empty
Rule 151   empty -> <empty>

Terminals, with rules where they appear

and                  : 97
bool                 : 29
comma                : 19 26 60 66 92 126
cread                : 86
cteFloat             : 138
cteInt               : 18 19 137
cteString            : 143
cwrite               : 88
divide               : 117
else                 : 78
elseif               : 79
equals               : 144
error                : 
et                   : 106
false                : 142
float                : 28
ge                   : 104
gt                   : 102
id                   : 1 18 19 25 26 53 59 60 63 65 66 86 123 124 128 146
if                   : 73
int                  : 27
le                   : 105
left_cb              : 32 47 63
left_dblquotes       : 
left_par             : 53 63 74 83 86 88 90 119 125
left_sb              : 18 19 128
list                 : 16
lt                   : 101
main                 : 1
minus                : 112 134
multiply             : 116
ne                   : 103
not                  : 95
or                   : 98
plus                 : 111 133
program              : 1
return               : 52
right_cb             : 32 47 63
right_dblquotes      : 
right_par            : 53 63 74 83 86 88 90 119 125
right_sb             : 18 19 128
semicolon            : 1 16 23 52 86 88 90 144
string               : 30
true                 : 141
var                  : 23
void                 : 63
while                : 83

Nonterminals, with rules where they appear

ASIGNACION           : 67
ASIGNACION_AUX       : 144
BOOLEANA             : 130
CICLO                : 69
CONDICION            : 68
CONDICION_AUX        : 73 79
CONSTANTE            : 120
CUERPO               : 1 74 78 83
CUERPOFUNC           : 50 63
CUERPOFUNC_AUX       : 39 41
CUERPOFUNC_ESTATUTO  : 40 41
CUERPOFUNC_VARS      : 40 41
CUERPORETORNO        : 53
CUERPORETORNO_AUX    : 47 49
CUERPORETORNO_CF_AUX : 48 49
CUERPO_AUX           : 32 34
CUERPO_ESTATUTO      : 33 34
CUERPO_VARS          : 33 34
ELIF                 : 76
ELSE                 : 75
ELSE_ELIF            : 74
ESCRITURA            : 71
ESTATUTO             : 37 45
EXP                  : 52 100 101 102 103 104 105 106 111 112 128
EXPRESION            : 74 83 88 91 92 97 98 119 125 126 144
EXPRESIONLOGICA      : 93
EXPRESIONLOGICA_AUX  : 100
EXPRESION_B          : 93
EXPRESION_NOT        : 93
EXP_AUX              : 109
FACTOR               : 114
FACTOR_AUX           : 122
FUNC                 : 9
FUNC_PARA            : 53 60
LECTURA              : 70
LISTA                : 121 147
LLAMADA              : 72
LLAMADAF_AUX         : 125 126
LLAMADA_EXPRESION    : 90 92
LLAMADA_F            : 124
NUMERICA             : 129
NUMERICA_AUX         : 132 133 134
PROGRAMA             : 0
PROGRAMA_FUNC        : 1 8
PROGRAMA_FUNC_AUX    : 7 8
PROGRAMA_VARS        : 1
RETORNO              : 48 49
STRINGS              : 131
TERMINO              : 109 116 117
TERMINO_AUX          : 114
TIPO                 : 16 23 53 59 60 65 66
VARS                 : 5 35 43
VARS_AUX             : 11 13
VARS_LIST            : 14
VARS_LIST_AUX        : 16 19
VARS_LIST_VAR        : 12 13
VARS_VAR             : 15
VARS_VAR_AUX         : 23 26
VOIDFUNC             : 54
VOIDFUNC_PARA        : 63 66
empty                : 2 4 6 10 17 20 21 22 24 31 36 38 42 44 46 51 55 56 57 58 61 62 64 77 80 81 82 84 85 87 89 94 96 99 107 108 110 113 115 118 127 135 136 139 140 145 148 149 150
nt_agregarCteLista   : 18 19
nt_agregarDicVar     : 18 19 25 26
nt_agregarId         : 18 19 25 26
nt_agregarIdFunc     : 53 63
nt_agregarParametro  : 59 60 65 66
nt_ambienteMain      : 1
nt_cambiarScope      : 1 1 3
nt_cambioFuncActual  : 53
nt_cambioTipoActual  : 27 28 29 30
nt_checaAndOrNot     : 93
nt_checaEquals       : 144
nt_checarBool        : 74 83
nt_checarRelop       : 101 102 103 104 105 106
nt_checar_multis     : 114
nt_checar_sumas      : 109
nt_escribir          : 88
nt_funcInicio        : 40 41
nt_hacerLista        : 16
nt_hacerVar          : 23
nt_hacerVoid         : 63
nt_leer              : 86
nt_popPOper          : 119
nt_pushElse          : 78 79
nt_pushEndsub        : 53 54
nt_pushFloat         : 138
nt_pushInt           : 137
nt_pushJmpMain       : 1
nt_pushLoop          : 83
nt_pushPOper         : 95 97 98 101 102 103 104 105 106 111 112 116 117 119 144
nt_pushPilaO         : 123 146
nt_pushSalto         : 74
nt_saltoLoop         : 83
nt_sigMas            : 133
nt_sigMenos          : 134
test_print           : 

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . program id nt_pushJmpMain semicolon PROGRAMA_VARS nt_cambiarScope PROGRAMA_FUNC nt_cambiarScope main nt_ambienteMain CUERPO

    program         shift and go to state 1

    PROGRAMA                       shift and go to state 2

state 1

    (1) PROGRAMA -> program . id nt_pushJmpMain semicolon PROGRAMA_VARS nt_cambiarScope PROGRAMA_FUNC nt_cambiarScope main nt_ambienteMain CUERPO

    id              shift and go to state 3


state 2

    (0) S' -> PROGRAMA .



state 3

    (1) PROGRAMA -> program id . nt_pushJmpMain semicolon PROGRAMA_VARS nt_cambiarScope PROGRAMA_FUNC nt_cambiarScope main nt_ambienteMain CUERPO
    (4) nt_pushJmpMain -> . empty
    (151) empty -> .

    semicolon       reduce using rule 151 (empty -> .)

    nt_pushJmpMain                 shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) PROGRAMA -> program id nt_pushJmpMain . semicolon PROGRAMA_VARS nt_cambiarScope PROGRAMA_FUNC nt_cambiarScope main nt_ambienteMain CUERPO

    semicolon       shift and go to state 6


state 5

    (4) nt_pushJmpMain -> empty .

    semicolon       reduce using rule 4 (nt_pushJmpMain -> empty .)


state 6

    (1) PROGRAMA -> program id nt_pushJmpMain semicolon . PROGRAMA_VARS nt_cambiarScope PROGRAMA_FUNC nt_cambiarScope main nt_ambienteMain CUERPO
    (5) PROGRAMA_VARS -> . VARS
    (6) PROGRAMA_VARS -> . empty
    (11) VARS -> . VARS_AUX
    (151) empty -> .
    (12) VARS_AUX -> . VARS_LIST_VAR
    (13) VARS_AUX -> . VARS_AUX VARS_LIST_VAR
    (14) VARS_LIST_VAR -> . VARS_LIST
    (15) VARS_LIST_VAR -> . VARS_VAR
    (16) VARS_LIST -> . list nt_hacerLista TIPO VARS_LIST_AUX semicolon
    (23) VARS_VAR -> . var nt_hacerVar TIPO VARS_VAR_AUX semicolon

    int             reduce using rule 151 (empty -> .)
    float           reduce using rule 151 (empty -> .)
    bool            reduce using rule 151 (empty -> .)
    string          reduce using rule 151 (empty -> .)
    void            reduce using rule 151 (empty -> .)
    main            reduce using rule 151 (empty -> .)
    list            shift and go to state 14
    var             shift and go to state 10

    VARS                           shift and go to state 7
    VARS_LIST                      shift and go to state 9
    VARS_LIST_VAR                  shift and go to state 12
    PROGRAMA_VARS                  shift and go to state 8
    VARS_AUX                       shift and go to state 15
    VARS_VAR                       shift and go to state 13
    empty                          shift and go to state 11

state 7

    (5) PROGRAMA_VARS -> VARS .

    int             reduce using rule 5 (PROGRAMA_VARS -> VARS .)
    float           reduce using rule 5 (PROGRAMA_VARS -> VARS .)
    bool            reduce using rule 5 (PROGRAMA_VARS -> VARS .)
    string          reduce using rule 5 (PROGRAMA_VARS -> VARS .)
    void            reduce using rule 5 (PROGRAMA_VARS -> VARS .)
    main            reduce using rule 5 (PROGRAMA_VARS -> VARS .)


state 8

    (1) PROGRAMA -> program id nt_pushJmpMain semicolon PROGRAMA_VARS . nt_cambiarScope PROGRAMA_FUNC nt_cambiarScope main nt_ambienteMain CUERPO
    (2) nt_cambiarScope -> . empty
    (151) empty -> .

    int             reduce using rule 151 (empty -> .)
    float           reduce using rule 151 (empty -> .)
    bool            reduce using rule 151 (empty -> .)
    string          reduce using rule 151 (empty -> .)
    void            reduce using rule 151 (empty -> .)
    main            reduce using rule 151 (empty -> .)

    nt_cambiarScope                shift and go to state 16
    empty                          shift and go to state 17

state 9

    (14) VARS_LIST_VAR -> VARS_LIST .

    list            reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    var             reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    if              reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    while           reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    cread           reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    cwrite          reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    left_par        reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    id              reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    right_cb        reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    int             reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    float           reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    bool            reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    string          reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    void            reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    main            reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)
    return          reduce using rule 14 (VARS_LIST_VAR -> VARS_LIST .)


state 10

    (23) VARS_VAR -> var . nt_hacerVar TIPO VARS_VAR_AUX semicolon
    (24) nt_hacerVar -> . empty
    (151) empty -> .

    int             reduce using rule 151 (empty -> .)
    float           reduce using rule 151 (empty -> .)
    bool            reduce using rule 151 (empty -> .)
    string          reduce using rule 151 (empty -> .)

    nt_hacerVar                    shift and go to state 18
    empty                          shift and go to state 19

state 11

    (6) PROGRAMA_VARS -> empty .

    int             reduce using rule 6 (PROGRAMA_VARS -> empty .)
    float           reduce using rule 6 (PROGRAMA_VARS -> empty .)
    bool            reduce using rule 6 (PROGRAMA_VARS -> empty .)
    string          reduce using rule 6 (PROGRAMA_VARS -> empty .)
    void            reduce using rule 6 (PROGRAMA_VARS -> empty .)
    main            reduce using rule 6 (PROGRAMA_VARS -> empty .)


state 12

    (12) VARS_AUX -> VARS_LIST_VAR .

    list            reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    var             reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    if              reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    while           reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    cread           reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    cwrite          reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    left_par        reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    id              reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    return          reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    right_cb        reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    int             reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    float           reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    bool            reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    string          reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    void            reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)
    main            reduce using rule 12 (VARS_AUX -> VARS_LIST_VAR .)


state 13

    (15) VARS_LIST_VAR -> VARS_VAR .

    list            reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    var             reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    if              reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    while           reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    cread           reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    cwrite          reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    left_par        reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    id              reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    right_cb        reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    int             reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    float           reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    bool            reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    string          reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    void            reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    main            reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)
    return          reduce using rule 15 (VARS_LIST_VAR -> VARS_VAR .)


state 14

    (16) VARS_LIST -> list . nt_hacerLista TIPO VARS_LIST_AUX semicolon
    (17) nt_hacerLista -> . empty
    (151) empty -> .

    int             reduce using rule 151 (empty -> .)
    float           reduce using rule 151 (empty -> .)
    bool            reduce using rule 151 (empty -> .)
    string          reduce using rule 151 (empty -> .)

    empty                          shift and go to state 21
    nt_hacerLista                  shift and go to state 20

state 15

    (11) VARS -> VARS_AUX .
    (13) VARS_AUX -> VARS_AUX . VARS_LIST_VAR
    (14) VARS_LIST_VAR -> . VARS_LIST
    (15) VARS_LIST_VAR -> . VARS_VAR
    (16) VARS_LIST -> . list nt_hacerLista TIPO VARS_LIST_AUX semicolon
    (23) VARS_VAR -> . var nt_hacerVar TIPO VARS_VAR_AUX semicolon

  ! shift/reduce conflict for list resolved as shift
  ! shift/reduce conflict for var resolved as shift
    int             reduce using rule 11 (VARS -> VARS_AUX .)
    float           reduce using rule 11 (VARS -> VARS_AUX .)
    bool            reduce using rule 11 (VARS -> VARS_AUX .)
    string          reduce using rule 11 (VARS -> VARS_AUX .)
    void            reduce using rule 11 (VARS -> VARS_AUX .)
    main            reduce using rule 11 (VARS -> VARS_AUX .)
    if              reduce using rule 11 (VARS -> VARS_AUX .)
    while           reduce using rule 11 (VARS -> VARS_AUX .)
    cread           reduce using rule 11 (VARS -> VARS_AUX .)
    cwrite          reduce using rule 11 (VARS -> VARS_AUX .)
    left_par        reduce using rule 11 (VARS -> VARS_AUX .)
    id              reduce using rule 11 (VARS -> VARS_AUX .)
    right_cb        reduce using rule 11 (VARS -> VARS_AUX .)
    return          reduce using rule 11 (VARS -> VARS_AUX .)
    list            shift and go to state 14
    var             shift and go to state 10

  ! list            [ reduce using rule 11 (VARS -> VARS_AUX .) ]
  ! var             [ reduce using rule 11 (VARS -> VARS_AUX .) ]

    VARS_LIST                      shift and go to state 9
    VARS_LIST_VAR                  shift and go to state 22
    VARS_VAR                       shift and go to state 13

state 16

    (1) PROGRAMA -> program id nt_pushJmpMain semicolon PROGRAMA_VARS nt_cambiarScope . PROGRAMA_FUNC nt_cambiarScope main nt_ambienteMain CUERPO
    (7) PROGRAMA_FUNC -> . PROGRAMA_FUNC_AUX
    (8) PROGRAMA_FUNC -> . PROGRAMA_FUNC PROGRAMA_FUNC_AUX
    (9) PROGRAMA_FUNC_AUX -> . FUNC
    (10) PROGRAMA_FUNC_AUX -> . empty
    (53) FUNC -> . TIPO nt_cambioFuncActual id nt_agregarIdFunc left_par FUNC_PARA right_par CUERPORETORNO nt_pushEndsub
    (54) FUNC -> . VOIDFUNC nt_pushEndsub
    (151) empty -> .
    (27) TIPO -> . int nt_cambioTipoActual
    (28) TIPO -> . float nt_cambioTipoActual
    (29) TIPO -> . bool nt_cambioTipoActual
    (30) TIPO -> . string nt_cambioTipoActual
    (63) VOIDFUNC -> . void nt_hacerVoid id nt_agregarIdFunc left_par VOIDFUNC_PARA right_par left_cb CUERPOFUNC right_cb

  ! shift/reduce conflict for int resolved as shift
  ! shift/reduce conflict for float resolved as shift
  ! shift/reduce conflict for bool resolved as shift
  ! shift/reduce conflict for string resolved as shift
  ! shift/reduce conflict for void resolved as shift
    main            reduce using rule 151 (empty -> .)
    int             shift and go to state 23
    float           shift and go to state 24
    bool            shift and go to state 28
    string          shift and go to state 31
    void            shift and go to state 32

  ! int             [ reduce using rule 151 (empty -> .) ]
  ! float           [ reduce using rule 151 (empty -> .) ]
  ! bool            [ reduce using rule 151 (empty -> .) ]
  ! string          [ reduce using rule 151 (empty -> .) ]
  ! void            [ reduce using rule 151 (empty -> .) ]

    PROGRAMA_FUNC_AUX              shift and go to state 27
    TIPO                           shift and go to state 25
    PROGRAMA_FUNC                  shift and go to state 26
    VOIDFUNC                       shift and go to state 29
    FUNC                           shift and go to state 33
    empty                          shift and go to state 30

state 17

    (2) nt_cambiarScope -> empty .

    left_cb         reduce using rule 2 (nt_cambiarScope -> empty .)
    int             reduce using rule 2 (nt_cambiarScope -> empty .)
    float           reduce using rule 2 (nt_cambiarScope -> empty .)
    bool            reduce using rule 2 (nt_cambiarScope -> empty .)
    string          reduce using rule 2 (nt_cambiarScope -> empty .)
    void            reduce using rule 2 (nt_cambiarScope -> empty .)
    main            reduce using rule 2 (nt_cambiarScope -> empty .)


state 18

    (23) VARS_VAR -> var nt_hacerVar . TIPO VARS_VAR_AUX semicolon
    (27) TIPO -> . int nt_cambioTipoActual
    (28) TIPO -> . float nt_cambioTipoActual
    (29) TIPO -> . bool nt_cambioTipoActual
    (30) TIPO -> . string nt_cambioTipoActual

    int             shift and go to state 23
    float           shift and go to state 24
    bool            shift and go to state 28
    string          shift and go to state 31

    TIPO                           shift and go to state 34

state 19

    (24) nt_hacerVar -> empty .

    int             reduce using rule 24 (nt_hacerVar -> empty .)
    float           reduce using rule 24 (nt_hacerVar -> empty .)
    bool            reduce using rule 24 (nt_hacerVar -> empty .)
    string          reduce using rule 24 (nt_hacerVar -> empty .)


state 20

    (16) VARS_LIST -> list nt_hacerLista . TIPO VARS_LIST_AUX semicolon
    (27) TIPO -> . int nt_cambioTipoActual
    (28) TIPO -> . float nt_cambioTipoActual
    (29) TIPO -> . bool nt_cambioTipoActual
    (30) TIPO -> . string nt_cambioTipoActual

    int             shift and go to state 23
    float           shift and go to state 24
    bool            shift and go to state 28
    string          shift and go to state 31

    TIPO                           shift and go to state 35

state 21

    (17) nt_hacerLista -> empty .

    int             reduce using rule 17 (nt_hacerLista -> empty .)
    float           reduce using rule 17 (nt_hacerLista -> empty .)
    bool            reduce using rule 17 (nt_hacerLista -> empty .)
    string          reduce using rule 17 (nt_hacerLista -> empty .)


state 22

    (13) VARS_AUX -> VARS_AUX VARS_LIST_VAR .

    list            reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    var             reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    if              reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    while           reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    cread           reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    cwrite          reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    left_par        reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    id              reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    return          reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    right_cb        reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    int             reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    float           reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    bool            reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    string          reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    void            reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)
    main            reduce using rule 13 (VARS_AUX -> VARS_AUX VARS_LIST_VAR .)


state 23

    (27) TIPO -> int . nt_cambioTipoActual
    (31) nt_cambioTipoActual -> . empty
    (151) empty -> .

    id              reduce using rule 151 (empty -> .)

    nt_cambioTipoActual            shift and go to state 36
    empty                          shift and go to state 37

state 24

    (28) TIPO -> float . nt_cambioTipoActual
    (31) nt_cambioTipoActual -> . empty
    (151) empty -> .

    id              reduce using rule 151 (empty -> .)

    nt_cambioTipoActual            shift and go to state 38
    empty                          shift and go to state 37

state 25

    (53) FUNC -> TIPO . nt_cambioFuncActual id nt_agregarIdFunc left_par FUNC_PARA right_par CUERPORETORNO nt_pushEndsub
    (57) nt_cambioFuncActual -> . empty
    (151) empty -> .

    id              reduce using rule 151 (empty -> .)

    nt_cambioFuncActual            shift and go to state 39
    empty                          shift and go to state 40

state 26
